--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build src/main.ts"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -11,7 +11,12 @@
   "description": "",
   "packageManager": "pnpm@8.15.8+sha256.691fe176eea9a8a80df20e4976f3dfb44a04841ceb885638fe2a26174f81e65e",
   "devDependencies": {
+    "@types/node": "^20.14.1",
     "@vercel/ncc": "^0.38.1",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0"
   }
 }
